--- a/OneMoreToDoList_Realm/Base.lproj/Main.storyboard
+++ b/OneMoreToDoList_Realm/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.59" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.45"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.47"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -39,12 +39,26 @@
                                     <action selector="Button1:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3v9-2H-Xec"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JuN-Gy-RKA">
+                                <rect key="frame" x="160.5" y="276" width="93" height="42"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="26"/>
+                                <state key="normal" title="Button 2">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="Button1:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xJZ-rw-vcV"/>
+                                    <action selector="Button2:" destination="BYZ-38-t0r" eventType="touchUpInside" id="d1Z-P0-XXd"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="gwS-bE-nqS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7xg-IK-KWl"/>
+                            <constraint firstItem="JuN-Gy-RKA" firstAttribute="top" secondItem="gwS-bE-nqS" secondAttribute="bottom" constant="25" id="VLp-Be-l4o"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p1o-lw-8Kg" secondAttribute="trailing" constant="12" id="XIc-3z-TyS"/>
                             <constraint firstItem="gwS-bE-nqS" firstAttribute="top" secondItem="p1o-lw-8Kg" secondAttribute="bottom" constant="40" id="by7-qw-lOL"/>
+                            <constraint firstItem="JuN-Gy-RKA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f8d-hc-Msl"/>
                             <constraint firstItem="p1o-lw-8Kg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="rmG-xQ-bBJ"/>
                             <constraint firstItem="p1o-lw-8Kg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="12" id="wpH-05-fie"/>
                         </constraints>
